--- a/hemocentro/www/style.css
+++ b/hemocentro/www/style.css
@@ -6,11 +6,12 @@
     
 }
 body{
+    background-color: #000000;
+}
+.bg-custom {
+    background-color: #123456;
 }
 .container-fluid{
-    background-color:rgb(240, 240, 240);
-    margin: 10px;
-
 }
 header{
    
@@ -22,10 +23,14 @@ header{
     gap: 10px; 
 }*/
 .card{
+
     border: 1px solid #000;
     padding: 10px;
     text-align: center;
     
+}
+.variavel{
+    background-color: rgba(131, 131, 131, 0.692); 
 }
 p{text-align: center;}
 span{
