--- a/hemocentro/www/style.css
+++ b/hemocentro/www/style.css
@@ -6,10 +6,7 @@
     
 }
 body{
-    background-color: #000000;
-}
-.bg-custom {
-    background-color: #123456;
+    background-color: #f3f2f2 !important;
 }
 .container-fluid{
 }
@@ -23,7 +20,7 @@ header{
     gap: 10px; 
 }*/
 .card{
-
+    
     border: 1px solid #000;
     padding: 10px;
     text-align: center;
