--- a/hemocentro/www/style.css
+++ b/hemocentro/www/style.css
@@ -1,42 +1,33 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-    
-}
-body{
-    background-color: #f3f2f2 !important;
-}
-.container-fluid{
+    font-family: 'Ubuntu', sans-serif;
+
 }
 
-
-header{
-   
+body {
+    background-color: #dfdfdf !important;
 }
-/*.row my-2{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    grid-template-rows: auto; 
-    gap: 10px; 
-}*/
-.card{
-    
+
+.container-fluid {}
+
+header {}
+
+/*Cards*/
+.card {
     border: 1px solid #000;
     padding: 10px;
     text-align: center;
 }
-.variavel{
-    background-color: rgba(131, 131, 131, 0.692); 
+
+/*range da data*/
+#dates {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-p{text-align: center;}
-span{
-    
-}
-.card-title{
-    font-family: 'Ubuntu', sans-serif;
-}
-.card-text{
-    font-family: 'Ubuntu', sans-serif;
+
+p {
+    text-align: center;
 }
